--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,11 @@ jobs:
       with:
         tag_name: ${{ needs.build.outputs.Version }}
         release_name: Release ${{ needs.build.outputs.Version }}
-    - name: Create Release
-      if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change
-      uses: ncipollo/release-action@v1
-      with:
-        tag: ${{ needs.build.outputs.Version }}
-        name: Release ${{ needs.build.outputs.Version }}
-        artifacts: "nugetPackage/*"
-        token: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Create Release
+#       if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change
+#       uses: ncipollo/release-action@v1
+#       with:
+#         tag: ${{ needs.build.outputs.Version }}
+#         name: Release ${{ needs.build.outputs.Version }}
+#         artifacts: "nugetPackage/*"
+#         token: ${{ secrets.GITHUB_TOKEN }}
