--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,10 @@ jobs:
         name: nugetPackage
         path: DemoLibrary/DemoLibrary/bin/Release/ 
         
-  release:
-    runs-on: ubuntu-latest    
-    needs: build
-    if: github.ref == 'refs/heads/main' # only run job if on the main branch   
+#   release:
+#     runs-on: ubuntu-latest    
+#     needs: build
+#     if: github.ref == 'refs/heads/main' # only run job if on the main branch   
     
     steps:  
     #Push NuGet package to GitHub packages
