--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
 #     needs: build
 #     if: github.ref == 'refs/heads/main' # only run job if on the main branch   
     
-    steps:  
+   #steps:  
     #Push NuGet package to GitHub packages
     - name: Download nuget package artifact
       uses: actions/download-artifact@v1.0.0
